backend/proyecto1Backend/proyecto1App/parserYscanner/yapl.g4
grammar yapl;

// Tokens
LBRACE: '{';
RBRACE: '}';
LPAREN: '(';
RPAREN: ')';
SEMI: ';';
COMMA: ',';
EQUALS: '=';
ASSIGN: '<-';
PLUS: '+';
MINUS: '-';
MULT: '*';
DIV: '/';
EQ: '==';
NEQ: '!=';
LT: '<';
GT: '>';
GT_EQ: '>=';
LT_EQ: '<=';
AND: '&&';
OR: '||';
COLON: ':';

// Program
program: classDeclaration* EOF;

// Class Declaration
classDeclaration:
	CLASS TYPE_ID (INHERITS TYPE_ID)? LBRACE classBody RBRACE;

// Class Body
classBody: (
		attributeDeclaration
		| methodDeclaration
		| assignmentDeclaration
		| statement
	)*;

// Attribute Declaration
attributeDeclaration: type ID SEMI;

// Assignment Declaration
assignmentDeclaration: ID ASSIGN expression SEMI;

// Types
type: INT | STRING_TYPE | TYPE_ID | BOOL | VOID;

// Method Declaration
methodDeclaration: type ID LPAREN parameterList? RPAREN block;

// Parameter List
parameterList: parameter (COMMA parameter)*;
parameter: type ID;

// Statement
statement:
	// assignmentStatement
	variableDeclaration
	| letDeclaration
	| ifStatement
	| whileStatement
	| methodCallStatement
	| expressionStatement
	| returnStatement
	| block;

// Assignment Statement assignmentStatement: ID EQUALS expression SEMI;

// Variable Declaration
variableDeclaration: type ID (ASSIGN expression)? SEMI;

// Let declaration
letDeclaration:
	LET type ID (ASSIGN expression)? (
		COMMA type ID (ASSIGN expression)?
	)* IN expression SEMI;

// If Statement
ifStatement:
	IF LPAREN expression RPAREN statement (ELSE statement)? FI;

// While Statement
whileStatement: WHILE LPAREN expression RPAREN statement;

// Method Call Statement
methodCallStatement: ID LPAREN expressionList? RPAREN SEMI;

// Expression Statement
expressionStatement: expression SEMI;

// Return Statement
returnStatement: RETURN expression? SEMI;

// Expression List
expressionList: expression (COMMA expression)*;

// Block
block: LBRACE statement* RBRACE;

// Expressions
expression:
	expression PLUS expression							# additionExpression
	| expression MINUS expression						# subtractionExpression
	| expression MULT expression						# multiplicationExpression
	| expression DIV expression							# divisionExpression
	| expression EQ expression							# equalityExpression
	| expression LT expression							# lessThanExpression
	| expression GT expression							# greaterThanExpression
	| expression LT_EQ expression						# lessThanOrEqualExpression
	| expression GT_EQ expression						# greaterThanOrEqualExpression
	| expression NEQ expression							# notEqualExpression
	| expression ASSIGN expression						# assignmentExpression
	| expression AND expression							# andExpression
	| expression OR expression							# orExpression
	| expression DOT ID LPAREN expressionList? RPAREN	# methodCallExpression
	| NEW TYPE_ID										# newExpression
	| NOT expression									# notExpression
	| MINUS expression									# unaryMinusExpression
	| ID LPAREN expressionList? RPAREN					# methodCallExpression
	| ID												# identifierExpression
	| INTEGER											# integerLiteralExpression
	| STRING											# stringLiteralExpression
	| TRUE												# trueLiteralExpression
	| FALSE												# falseLiteralExpression
	| VOID												# voidLiteralExpression;

// Reserved Words
TRUE: 'true';
DOT: '.';
FALSE: 'false';
CLASS: 'class';
INHERITS: 'inherits';
SELF: 'self';
SELF_TYPE: 'SELF_TYPE';
ELSE: 'else';
FI: 'fi';
IF: 'if';
WHILE: 'while';
NEW: 'new';
ISVOID: 'isvoid';
NOT: 'not';
RETURN: 'return';
INT: 'int';
STRING_TYPE: 'string';
BOOL: 'bool';
VOID: 'void';
LET: 'let';
IN: 'in';

// Lexical Specifications
ID: [a-z][a-zA-Z0-9_]*;
TYPE_ID: [A-Z][a-zA-Z0-9_]*;
INTEGER: [0-9]+;
STRING: '"' ( ~["\n\r\t\\] | EscapeSequence)* '"';
fragment EscapeSequence:
	'\\' ('\\' | 'b' | 't' | 'n' | 'r' | 'f');
COMMENT: ('--' .*? '\n' | '(*' .*? '*)') -> skip;
WS: [ \t\r\n]+ -> skip;
